--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <lottie-player class="anima" src="https://assets8.lottiefiles.com/packages/lf20_jMQS1ol928.json"  background="transparent"  speed="1"  style="width: 1260px; height: 700px;"  loop autoplay></lottie-player>
   </div>
   <div  >
-    <span class="FFC">Fast food cafe🍔 <br><div class="jj"> Lorem, ipsum dolor sit amet consectet ratione eius quas Doloribus!. Unde ut reiciendis eligendi eos, ad minima modi enim repellendus doloribus possimus 
+    <span class="FFC">Fast food cafe🍔 <br><div class="jj"> Lorem, ipsum yeo yep amet consectet ratione eius quas Doloribus!. Unde ut reiciendis eligendi eos, ad minima modi enim repellendus doloribus possimus 
       repudiandae, fuga cum optio doloremque voluptas!</div> <br> <a href="https://restaurant-guru.in/DC-Vellore" target="_blank"> <button  class="btn">Order online</button></a>
     </span>
   </div>
