--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <title>FFC</title>
 </head>
 <body>
-  <nav >
+  <nav>
     <span class="yo">FFC🍕</span>
     <ul >
       <li><a href="#home">Home</a></li>
@@ -21,11 +21,11 @@
   <div class="yolo"  id ="home" >
   <div >
     <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
-    <lottie-player class="anima" src="https://assets8.lottiefiles.com/packages/lf20_jMQS1ol928.json"  background="transparent"  speed="1"  style="width: 1260px; height: 700px;"  loop autoplay></lottie-player>
+    <lottie-player class="anima" src="https://assets8.lottiefiles.com/packages/lf20_jMQS1ol928.json"  background="transparent"  speed="1"  style="width: 1190px; height: 750px;"  loop autoplay></lottie-player>
   </div>
   <div  >
     <span class="FFC">Fast food cafe🍔 <br><div class="jj"> Lorem, ipsum yeo yep amet consectet ratione eius quas Doloribus!. Unde ut reiciendis eligendi eos, ad minima modi enim repellendus doloribus possimus 
-      repudiandae, fuga cum optio doloremque voluptas!</div> <br> <a href="https://restaurant-guru.in/DC-Vellore" target="_blank"> <button  class="btn">Order online</button></a>
+      repudiandae, fuga cum optio doloremque voluptas!</div> <a href="https://restaurant-guru.in/DC-Vellore" target="_blank"> <button  class="btn">Order online</button></a>
     </span>
   </div>
 </div>
