--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link rel="icon" href="media/favicon1.png">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Irish+Grover&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Sedgwick+Ave&display=swap" rel="stylesheet">
   <title>FFC</title>
 </head>
 <body>
@@ -18,13 +18,15 @@
       <li><a href="#contact">Contact-Us</a></li>
     </ul>
   </nav>
+  <nav class="new">
+  </nav>
   <div class="yolo"  id ="home" >
   <div >
     <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
     <lottie-player class="anima" src="https://assets8.lottiefiles.com/packages/lf20_jMQS1ol928.json"  background="transparent"  speed="1"  style="width: 1190px; height: 750px;"  loop autoplay></lottie-player>
   </div>
   <div  >
-    <span class="FFC">Fast food cafe🍔 <br><div class="jj"> Lorem, ipsum yeo yep amet consectet ratione eius quas Doloribus!. Unde ut reiciendis eligendi eos, ad minima modi enim repellendus doloribus possimus 
+    <span class="FFC">Fast food  cafe🍔 <br><div class="jj"> Lorem, ipsum yeo yep amet consectet ratione eius quas Doloribus!. Unde ut reiciendis eligendi eos, ad minima modi enim repellendus doloribus possimus 
       repudiandae, fuga cum optio doloremque voluptas!</div> <a href="https://restaurant-guru.in/DC-Vellore" target="_blank"> <button  class="btn">Order online</button></a>
     </span>
   </div>
