--- a/index.html
+++ b/index.html
@@ -20,22 +20,23 @@
   </nav>
   <nav class="new">
   </nav>
-  <div class="yolo"  id ="home" >
+  <div class="yolo" id="home" >
   <div >
     <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
     <lottie-player class="anima" src="https://assets8.lottiefiles.com/packages/lf20_jMQS1ol928.json"  background="transparent"  speed="1"  style="width: 1190px; height: 750px;"  loop autoplay></lottie-player>
   </div>
   <div  >
-    <span class="FFC">Fast food  cafe🍔 <br><div class="jj"> Lorem, ipsum yeo yep amet consectet ratione eius quas Doloribus!. Unde ut reiciendis eligendi eos, ad minima modi enim repellendus doloribus possimus 
+    <img  class="logo" src="media/FFC.jpg" alt="imamge not found">
+    <span class="FFC">Fast food  cafe🍔 <br><div class="jj"> Lorem, ipsum yeo yep amet consectet ratione eius quas Doloribus!. Unde ut reiciendis eligendi eos, ad minima modi enim repellendus doloribus sisf fjdfkf simus 
       repudiandae, fuga cum optio doloremque voluptas!</div> <a href="https://restaurant-guru.in/DC-Vellore" target="_blank"> <button  class="btn">Order online</button></a>
     </span>
   </div>
 </div>
   <main>
-    <section id="about">
-      <h2>About Us</h2>
-      <div class="text1">Welcome to Fast food cafe, where we serve delicious food made with fresh, local ingredients. Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque reiciendis architecto obcaecati! Sed autem veniam repellendus necessitatibus sapiente cumque recusandae temporibus iure, quia similique consequuntur magni corrupti odio cum! Repellat? Lorem ipsum dolor sit amet, consectetur adipisicing elit. At doloremque et aliquid impedit amet, consequatur repudiandae voluptatibus, illo facilis quia possimus tempore obcaecati aut necessitatibus, magnam perspiciatis inventore. Dolore, laudantium.</div>
-    </section>
+    <div class="about" id="about" >
+      <h2 >About Us</h2>
+      <div class="text1">Welcome to Fast food cafe, where we serve delicious food made with fresh, local ingredients. Lorem ipsum dolor sit amet consectetur adipisicing elit. Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus quidem corporis sed ducimus iusto, libero vitae consequuntur quaerat repudiandae nihil sit cupiditate, expedita, debitis excepturi perferendis eos incidunt quisquam exercitationem. Itaque reiciendis architecto obcaecati! Sed autem veniam repellendus necessitatibus sapiente cumque recusandae temporibus iure, quia similique consequuntur magni corrupti odio cum! Repellat? Lorem ipsum dolor sit amet, consectetur adipisicing elit. At doloremque et aliquid impedit amet, consequatur repudiandae voluptatibus, illo facilis quia possimus tempore obcaecati aut necessitatibus, magnam perspiciatis inventore. Dolore, laudantium.</div>
+    </div>
     <section id="menu">
       <h2>Menu</h2>
       <div class="box" ><img class="imgs" src="media/pizza.jpg" alt="not found"><b>Pizza</b><br><b>Price:</b> Rs 200</div>
@@ -50,8 +51,13 @@
       <div class="box" ><img class="imgs" src="media/veg-roll.jpg" alt="not found"><b>Veg-roll</b><br> <b>Price:</b> Rs 80</div>
       <div class="box" ><img class="imgs" src="media/chicken-roll.jpg" alt="not found"><b>Chicken-roll</b><br> <b>Price:</b> Rs 100</div>
       <div class="box" ><img class="imgs" src="media/hotdog.jpg" alt="not found"><b>Hot-dog</b><br> <b>Price:</b> Rs 100</div>
-      <div class="box" ><img class="imgs" src="media/spring-roll.jpg" alt="not found"><b>spring-roll</b><br> <b>Price:</b> Rs 100</div>
+      <div class="box" ><img class="imgs" src="media/spring-roll.jpg" alt="not found"><b>Spring-roll</b><br> <b>Price:</b> Rs 100</div>
+      <div class="box" ><img class="imgs" src="media/Fried-Chicken.png" alt="not found"><b>Fried-Chicken</b><br> <b>Price:</b> Rs 120</div>
+      <div class="box" ><img class="imgs" src="media/Chicken_Nuggets.jpg" alt="not found"><b>Chicken-Nuggets</b><br> <b>Price:</b> Rs 180</div>
+      <div class="box" ><img class="imgs" src="media/Chocolate-pastry.jpg" alt="not found"><b>Chocolate-Pastry</b><br> <b>Price:</b> Rs 50</div>
       <div class="box" ><img class="imgs" src="media/chocolava-cake.jpg" alt="not found"><b>Chocolava-cake</b><br> <b>Price:</b> Rs 80</div>
+      <div class="box" ><img class="imgs" src="media/Mojito.jpg" alt="not found"><b>Mojito</b><br> <b>Price:</b> Rs 90</div>
+      <div class="box" ><img class="imgs" src="media/Falooda-Ice-Cream.jpg" alt="not found"><b>Falooda</b><br> <b>Price:</b> Rs 150</div>
       <div class="box" ><img class="imgs" src="media/oreo-shake.jpg" alt="not found"><b>Oreo-shake</b><br> <b>Price:</b> Rs 120</div>
     </section>
     <section id="contact">
