--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
       <li><a href="#home">Home</a></li>
       <li><a href="#about">About Us</a></li>
       <li><a href="#menu">Menu</a></li>
+      <li><a href="#home">Order online</a></li>
       <li><a href="#contact">Contact-Us</a></li>
     </ul>
   </nav>
