--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 
 <head>
+  <meta name="viewport" content="width=device-width,initial-scale=1.0">
   <link rel="stylesheet" href="styles.css">
   <link rel="icon" href="media/favicon1.png">
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -21,15 +22,14 @@
       <li><a href="#contact">Contact-Us</a></li>
     </ul>
   </nav>
-  <nav class="new" >
-  </nav>
+
   <div class="yolo" id="home">
     <div>
       <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
       <lottie-player class="anima" src="https://assets8.lottiefiles.com/packages/lf20_jMQS1ol928.json"
         background="transparent" speed="1" style="width: 1190px; height: 750px;" loop autoplay></lottie-player>
     </div>
-    <div>
+    <div class="heading">
       <img class="logo" src="media/FFC.jpg" alt="imamge not found">
       <span class="FFC">Fast food cafe🍕 <br>
         <div class="jj"> Lorem, ipsum yeo yep amet consectet ratione eius quas Doloribus!. Unde ut reiciendis eligendi
@@ -41,58 +41,59 @@
   </div>
   <main>
     <div class="about" id="about">
-      <h2>About Us</h2>
-      <div class="text1">Welcome to Fast food cafe, where we serve delicious food made with fresh, local ingredients.
+      <h1>About-Us</h1><br>
+      <p> Welcome to Fast food cafe, where we serve delicious food made with fresh, local ingredients.
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Lorem ipsum dolor sit amet consectetur adipisicing
         elit. Temporibus quidem corporis sed ducimus iusto, libero vitae consequuntur quaerat repudiandae nihil sit
         cupiditate, expedita, debitis excepturi perferendis eos incidunt quisquam exercitationem. Itaque reiciendis
         architecto obcaecati! Sed autem veniam repellendus necessitatibus sapiente cumque recusandae temporibus iure,
         quia similique consequuntur magni corrupti odio cum! Repellat? Lorem ipsum dolor sit amet, consectetur
         adipisicing elit. At doloremque et aliquid impedit amet, consequatur repudiandae voluptatibus, illo facilis quia
-        possimus tempore obcaecati aut necessitatibus, magnam perspiciatis inventore. Dolore, laudantium.</div>
+        possimus tempore obcaecati aut necessitatibus, magnam perspiciatis inventore. Dolore, laudantium.
+      </p>
     </div>
     <section id="menu">
       <br>
       <h2>Menu</h2>
-      <div class="box"><img class="imgs" src="media/pizza.jpg" alt="not found"><b>Pizza</b><br><b>Price:</b> Rs 200
+      <div class="box"><img class="imgs" src="media/pizza.jpg" alt="not found"><br><b>Pizza</b><br><b>Price:</b> Rs 200
       </div>
-      <div class="box"><img class="imgs" src="media/burger.jpg" alt="not found"><b>Burger</b><br> <b>Price:</b> Rs 150
+      <div class="box"><img class="imgs" src="media/burger.jpg" alt="not found"><br><b>Burger</b><br> <b>Price:</b> Rs 150
       </div>
-      <div class="box"><img class="imgs" src="media/fries.jpg" alt="not found"><b>Fries</b><br> <b>Price:</b> Rs 80
+      <div class="box"><img class="imgs" src="media/fries.jpg" alt="not found"><br><b>Fries</b><br> <b>Price:</b> Rs 80
       </div>
-      <div class="box"><img class="imgs" src="media/sandwich.jpg" alt="not found"><b>Sandwich</b><br> <b>Price:</b> Rs
+      <div class="box"><img class="imgs" src="media/sandwich.jpg" alt="not found"><br><b>Sandwich</b><br> <b>Price:</b> Rs
         120</div>
-      <div class="box"><img class="imgs" src="media/pasta.jpg" alt="not found"><b>Pasta</b><br> <b>Price:</b> Rs 180
+      <div class="box"><img class="imgs" src="media/pasta.jpg" alt="not found"><br><b>Pasta</b><br> <b>Price:</b> Rs 180
       </div>
-      <div class="box"><img class="imgs" src="media/veg-chow-mein.jpg" alt="not found"><b>Veg-chow-mein</b><br>
+      <div class="box"><img class="imgs" src="media/veg-chow-mein.jpg" alt="not found"><br><b>Veg-chowmein</b><br>
         <b>Price:</b> Rs 130</div>
-      <div class="box"><img class="imgs" src="media/veg-chilli.jpg" alt="not found"><b>Veg-chilli</b><br> <b>Price:</b>
+      <div class="box"><img class="imgs" src="media/veg-chilli.jpg" alt="not found"><br><b>Veg-chilli</b><br> <b>Price:</b>
         Rs 120</div>
-      <div class="box"><img class="imgs" src="media/paneer-chilli.jpg" alt="not found"><b>Paneer-chilli</b><br>
+      <div class="box"><img class="imgs" src="media/paneer-chilli.jpg" alt="not found"><br><b>Paneer-chilli</b><br>
         <b>Price:</b> Rs 150</div>
-      <div class="box"><img class="imgs" src="media/baby-corn-chilli.jpg" alt="not found"><b>Baby-corn-chilli</b><br>
+      <div class="box"><img class="imgs" src="media/baby-corn-chilli.jpg" alt="not found"><br><b>Babycorn-chilli</b><br>
         <b>Price:</b> Rs 180</div>
-      <div class="box"><img class="imgs" src="media/veg-roll.jpg" alt="not found"><b>Veg-roll</b><br> <b>Price:</b> Rs
+      <div class="box"><img class="imgs" src="media/veg-roll.jpg" alt="not found"><br><b>Veg-roll</b><br> <b>Price:</b> Rs
         80</div>
-      <div class="box"><img class="imgs" src="media/chicken-roll.jpg" alt="not found"><b>Chicken-roll</b><br>
+      <div class="box"><img class="imgs" src="media/chicken-roll.jpg" alt="not found"><br><b>Chicken-roll</b><br>
         <b>Price:</b> Rs 100</div>
-      <div class="box"><img class="imgs" src="media/hotdog.jpg" alt="not found"><b>Hot-dog</b><br> <b>Price:</b> Rs 100
+      <div class="box"><img class="imgs" src="media/hotdog.jpg" alt="not found"><br><b>Hot-dog</b><br> <b>Price:</b> Rs 100
       </div>
-      <div class="box"><img class="imgs" src="media/spring-roll.jpg" alt="not found"><b>Spring-roll</b><br>
+      <div class="box"><img class="imgs" src="media/spring-roll.jpg" alt="not found"><br><b>Spring-roll</b><br>
         <b>Price:</b> Rs 100</div>
-      <div class="box"><img class="imgs" src="media/Fried-Chicken.png" alt="not found"><b>Fried-Chicken</b><br>
+      <div class="box"><img class="imgs" src="media/Fried-Chicken.png" alt="not found"><br><b>Fried-Chicken</b><br>
         <b>Price:</b> Rs 120</div>
-      <div class="box"><img class="imgs" src="media/Chicken_Nuggets.jpg" alt="not found"><b>Chicken-Nuggets</b><br>
+      <div class="box"><img class="imgs" src="media/Chicken_Nuggets.jpg" alt="not found"><br><b>Chicken-Nuggets</b><br>
         <b>Price:</b> Rs 180</div>
-      <div class="box"><img class="imgs" src="media/Chocolate-pastry.jpg" alt="not found"><b>Chocolate-Pastry</b><br>
+      <div class="box"><img class="imgs" src="media/Chocolate-pastry.jpg" alt="not found"><br><b>Chocolate-Pastry</b><br>
         <b>Price:</b> Rs 50</div>
-      <div class="box"><img class="imgs" src="media/chocolava-cake.jpg" alt="not found"><b>Chocolava-cake</b><br>
+      <div class="box"><img class="imgs" src="media/chocolava-cake.jpg" alt="not found"><br><b>Chocolava-cake</b><br>
         <b>Price:</b> Rs 80</div>
-      <div class="box"><img class="imgs" src="media/Mojito.jpg" alt="not found"><b>Mojito</b><br> <b>Price:</b> Rs 90
+      <div class="box"><img class="imgs" src="media/Mojito.jpg" alt="not found"><br><b>Mojito</b><br> <b>Price:</b> Rs 90
       </div>
-      <div class="box"><img class="imgs" src="media/Falooda-Ice-Cream.jpg" alt="not found"><b>Falooda</b><br>
+      <div class="box"><img class="imgs" src="media/Falooda-Ice-Cream.jpg" alt="not found"><br><b>Falooda</b><br>
         <b>Price:</b> Rs 150</div>
-      <div class="box"><img class="imgs" src="media/oreo-shake.jpg" alt="not found"><b>Oreo-shake</b><br> <b>Price:</b>
+      <div class="box"><img class="imgs" src="media/oreo-shake.jpg" alt="not found"><br><b>Oreo-shake</b><br> <b>Price:</b>
         Rs 120</div>
     </section>
     <section id="contact">
