--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
   <nav>
     <span class="yo">FFC🍔</span>
-    <ul>
+    <ul class="links">
       <li><a href="#home">Home</a></li>
       <li><a href="#about">About Us</a></li>
       <li><a href="#menu">Menu</a></li>
@@ -22,26 +22,26 @@
       <li><a href="#contact">Contact-Us</a></li>
     </ul>
   </nav>
-
   <div class="yolo" id="home">
-    <div>
+    <div class="anima">
       <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
-      <lottie-player class="anima" src="https://assets8.lottiefiles.com/packages/lf20_jMQS1ol928.json"
-        background="transparent" speed="1" style="width: 1190px; height: 750px;" loop autoplay></lottie-player>
+      <lottie-player  src="https://assets8.lottiefiles.com/packages/lf20_jMQS1ol928.json"
+        background="transparent" speed="1" loop autoplay></lottie-player>
     </div>
     <div class="heading">
       <img class="logo" src="media/FFC.jpg" alt="imamge not found">
-      <span class="FFC">Fast food cafe🍕 <br>
+      <div class="FFC">
+       <span >Fast food cafe🍕 </span>
         <div class="jj"> Lorem, ipsum yeo yep amet consectet ratione eius quas Doloribus!. Unde ut reiciendis eligendi
-          eos, ad minima modi enim repellendus doloribus sisf fjdfkf simus
-          repudiandae, fuga cum optio doloremque voluptas!</div> <a href="https://restaurant-guru.in/DC-Vellore"
-          target="_blank"> <button class="btn">Order online</button></a>
-      </span>
+          eos, ad minima modi enim repellendus doloribus sisf fjdfkf simu.!
+        </div>
+        <a href="https://restaurant-guru.in/DC-Vellore" target="_blank"> <button class="btn">Order online</button></a>
+      </div>
     </div>
-  </div>
+</div>
   <main>
     <div class="about" id="about">
-      <h1>About-Us</h1><br>
+      <h1 class>About-Us</h1><br>
       <p> Welcome to Fast food cafe, where we serve delicious food made with fresh, local ingredients.
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Lorem ipsum dolor sit amet consectetur adipisicing
         elit. Temporibus quidem corporis sed ducimus iusto, libero vitae consequuntur quaerat repudiandae nihil sit
@@ -49,8 +49,7 @@
         architecto obcaecati! Sed autem veniam repellendus necessitatibus sapiente cumque recusandae temporibus iure,
         quia similique consequuntur magni corrupti odio cum! Repellat? Lorem ipsum dolor sit amet, consectetur
         adipisicing elit. At doloremque et aliquid impedit amet, consequatur repudiandae voluptatibus, illo facilis quia
-        possimus tempore obcaecati aut necessitatibus, magnam perspiciatis inventore. Dolore, laudantium.
-      </p>
+        possimus tempore obcaecati aut necessitatibus, magnam perspiciatis inventore. Dolore, laudantium.</p>
     </div>
     <section id="menu">
       <br>
