--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 </div>
   <main>
     <div class="about" id="about">
-      <h1 class>About-Us</h1><br>
+      <h1>About-Us</h1><br>
       <p> Welcome to Fast food cafe, where we serve delicious food made with fresh, local ingredients.
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Lorem ipsum dolor sit amet consectetur adipisicing
         elit. Temporibus quidem corporis sed ducimus iusto, libero vitae consequuntur quaerat repudiandae nihil sit
